--- a/recipes/Pizza.html
+++ b/recipes/Pizza.html
@@ -23,4 +23,4 @@
             <li>Enjoy like Hasbulla does</li>
         </ol>
 
-        <img src="../images/thumbsup.jpeg"
+        <img src="../images/thumbsup.jpg"
