--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
     <h3><strong>Recipes From Hasbulla</strong></h3>
         <ul>
-            <li><a href="./recipes/Pizza.html">Pizza By Hasbulla</a></li>
+            <li><a href="./recipes/pizza.html">Pizza By Hasbulla</a></li>
             <li><a href="./recipes/burger.html">Burger By Hasbulla</a></li>
         </ul>
