Nothing just some changes

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -10,6 +10,6 @@
 
     <h3><strong>Recipes From Hasbulla</strong></h3>
         <ul>
-            <li><a href="./recipes/pizza.html">Pizza By Hasbulla</a></li>
             <li><a href="./recipes/burger.html">Burger By Hasbulla</a></li>
+            <li><a href="./recipes/pizza.html">Pizza By Hasbulla</a></li>
         </ul>
